# openlifu-desktop-application

./: .dockerignore  .gitignore  AGENTS.md  BUILD_LINUX.md  BUILD_WINDOWS.md  CMakeLists.txt  Docker.windows  Dockerfile.linux  README.md  RELEASE.md  docker-entrypoint.cmd  docker-entrypoint.ps1  docker-entrypoint.sh  qt-installer-noninteractive.qs  run_docker_build.sh  run_docker_build_windows.bat
.github/workflows/: check-commit-messages.yml
Applications/OpenLIFUApp/: CMakeLists.txt  GeneratePythonEnvironmentArtifacts.cmake.in  GeneratePythonEnvironmentArtifacts.py  Main.cxx  qOpenLIFUAppMainWindow.cxx  slicer-application-properties.cmake
Modules/Scripted/Home/: CMakeLists.txt  Home.py
SuperBuild/: External_python-openlifu-environment-tools.cmake  ProvisionPythonEnvironmentTools.cmake  python-openlifu-environment-tools-requirements.in  python-openlifu-environment-tools-requirements.txt
docs/: release-component-version-table.md
tools/: release_component_version_row.py
